@@ -302,7 +302,8 @@
     <string name="elem_Const_pin_out">Returns the given value as a constant.</string>
     <string name="elem_Tunnel">Tunnel</string>
     <string name="elem_Tunnel_tt">Connects components without a wire. All tunnel elements, which have the same net name,
-        are connected together. Works only locally, so it is not possible to connect different circuits.</string>
+        are connected together. Works only locally, so it is not possible to connect different circuits.
+        Unnamed tunnels are ignored silently.</string>
     <string name="elem_Tunnel_pin_in">The connection to the tunnel.</string>
     <string name="elem_Splitter">Splitter</string>
     <string name="elem_Splitter_tt">Splits or creates a wire bundle or a data bus with more than one bit.
