@@ -9,6 +9,7 @@ HEAD, planned as v0.24
 - The octal number format was added.
 - A push button combined with LED was added.
 - A VGA monitor was added.
+- Unnamed Tunnels are ignored silently.
 
 v0.23, released on 23. Aug. 2019
 - Added generic circuits. Now it is possible to parameterize a sub circuit.
